<resources>
    <string name="app_name">Mom-bot</string>
    <string name="google_api_key">AIzaSyDsfNv2LCu5fr3iHoTT7NyBHaP2M1Q6jbs</string>
    <string name="common_blank"></string>
    <string name="common_ok">OK</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_degress">&#176;</string>
    <string name="common_login">Login</string>
    <string name="common_read_all">Read all</string>
    <string name="common_stop">Stop</string>
    <string name="common_answer">Your answer: %1$s</string>
    <string name="common_send">Send</string>
    <string name="common_close">Close</string>
    <string name="common_comma">,</string>
    <string name="common_dot">.</string>
    <string name="common_delete">Delete</string>
    <string name="common_save">Save</string>
    <string name="common_camera">Camera</string>
    <string name="common_gallery">Gallery</string>
    <string name="common_weekly">Weekly</string>
    <string name="common_daily">Daily</string>
    <string name="common_monthly">Monthly</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on">Turn on</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_services">Services</string>
    <string name="no_data">Please select any service</string>
    <string name="remove">Remove</string>
    <string name="report">Report</string>
    <string name="choose_sms">SMS</string>
    <string name="choose_email">EMAIL</string>
    <string name="dialog_sent_select_title">Choose type</string>
    <string name="dialog_choose_message_title">Choose message</string>
    <string name="dialog_choose_search_title">Choose search</string>
    <string name="dialog_choose_time_title">Choose time:</string>
    <string name="dialog_choose_action">Choose actions</string>
    <string name="dialog_confirm_exit">Do you want to exit?</string>
    <string name="dialog_confirm_setup_email">Email account isn\'t setup. Setup it now?</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="function_desc_back">Back</string>
    <string name="function_desc_getting_data">Getting data\.\.\.</string>
    <string name="function_desc_no_sms">No SMS</string>
    <string name="function_desc_no_email">No Email</string>
    <string name="function_desc_unread_sms">%1$s Unread SMS</string>
    <string name="function_desc_unread_email">%1$s Unread Email</string>
    <string name="function_desc_command">COMMAND</string>
    <string name="function_desc_communication">Communications</string>
    <string name="function_desc_information">Information</string>
    <string name="function_desc_emergency">Emergency Help</string>
    <string name="function_desc_admin">Administration</string>
    <string name="function_desc_read_email_fail">Setup email account</string>
    <string name="function_desc_news">News</string>
    <string name="function_desc_weather">Weather</string>
    <string name="function_sent_text_sms">Send message</string>
    <string name="function_setup_email_account">Setup email account</string>
    <string name="function_desc_set_alarm">Alarm</string>
    <string name="function_desc_set_reminder">Set reminder</string>
    <string name="function_calendar">Calendar</string>
    <string-array name="array_list_drawer">
        <item>Home classic</item>
        <item>Home with voice</item>
        <item>Month Calendar</item>
        <item>Weekly Calendar</item>
        <item>Daily Calendar</item>
        <item>Setting</item>
        <item>Logout</item>
        <item>Exit</item>
    </string-array>
    <string-array name="array_dialog_sent_selection">
        <item>SMS</item>
        <item>Email</item>
    </string-array>
    <string-array name="array_dialog_read_selection">
        <item>SMS</item>
        <item>Email</item>
        <item>Reminder</item>
    </string-array>
    <string-array name="array_email_address_test">
        <item>Alex;dexter@gmail.com;841638664689</item>
        <item>Harry;harry@gmail.com;84946824809</item>
        <item>Rita;rita@gmail.com;841638664689</item>
        <item>Debra;debra@gmail.com;841638664689</item>
    </string-array>
    <string-array name="array_repeat_type">
        <item>@string/common_daily</item>
        <item>@string/common_weekly</item>
        <item>@string/common_monthly</item>
    </string-array>
    <string name="err_login_fail">Login fail. Please check email and password again.</string>
    <string name="err_logout_fail">Login fail. Please try again.</string>
    <string name="err_email_invalid">Email is invalid</string>
    <string name="err_password_invalid">Password must not empty</string>
    <string name="err_NoDefaultRecognizer">Speech recognizer not installed or no default recognizer set</string>
    <string name="errorResultAudioError">Audio recording failed. Maybe another app is currently recording.</string>
    <string name="errorResultNetworkError">Something is wrong with the network</string>
    <string name="errorResultClientError">General client error</string>
    <string name="errorResultServerError">Recognizer server error</string>
    <string name="errorResultNoMatch">We don\'t understand. Try again</string>
    <string name="errorResultTimeout">Stop listening</string>
    <string name="msg_warn_location_cannot_determine">Can\'t determine your location. Do you want to adjust your setting now?</string>
    <string name="msg_err_cannot_open_setting">Can not open setting</string>
    <string name="msg_warn_no_people_recognize">This name \'%1$s\' doesn\'t exist.</string>
    <string name="msg_err_create_event">Create event failed</string>
    <string name="msg_info_create_event">Create event successfully</string>
    <string name="msg_info_send_email_success">Send message successfully</string>
    <string name="msg_err_send_email_fail">Send message failed</string>
    <string name="msg_err_camera_not_sdcard">Insert sdcard in order to take picture</string>
    <string name="msg_err_end_time_must_greater_start_time">End time must be greater than Start time.</string>
    <string name="msg_info_setup_email">You must setup email account. Go to Administration \> Setup email account</string>
    <string name="msg_war_no_contact">Contact list is empty.</string>
    <string name="recognize_search">Please speak search content after beep sound.</string>
    <string name="recognize_alarm">Please speak time alarm after beep sound.</string>
    <string name="recognize_message_to">Who do you want me to send this message to?</string>
    <string name="recognize_message_content">Please input message content</string>
    <string name="recognize_ask_send_message">Do you want to send this message?</string>
    <string name="recognize_ask_reminder_name">What is reminder title?</string>
    <string name="recognize_ask_reminder_description">What is reminder content?</string>
    <string name="recognize_ask_reminder_start_time">What is reminder start time?</string>
    <string name="recognize_ask_reminder_end_time">What is reminder end time?</string>
    <string name="command_example">Your command, for example: send message(email), send message(email) to xxx, set reminder, set reminder xxx, what time is it, search xxx, view message, view email, view calendar</string>
    <string name="command_send_email_to">send email to</string>
    <string name="command_send_message_to">send message to</string>
    <string name="command_send_email">send email</string>
    <string name="command_send_message">send message</string>
    <string name="command_set_reminder">set reminder</string>
    <string name="command_what_time">what time</string>
    <string name="command_search">search</string>
    <string name="command_calendar">view calendar</string>
    <string name="command_read_message">view message</string>
    <string name="command_read_email">view email</string>
    <string name="Verbose_Time_Hour">It\'s %1$s o\'clock %3$s.</string>
    <string name="Verbose_Time">It\'s %2$s past %1$s %3$s.</string>
    <string name="Time_AM">A.M.</string>
    <string name="Time_PM">P.M.</string>
    <string name="Time_InMorning">in the morning</string>
    <string name="Time_InAfternoon">in the afternoon</string>
    <string name="Time_InEvening">in the evening</string>
    <string name="sms_no_message">\.\.\. You have no message.</string>
    <string name="sms_unread">\.\.\. You have %1$s unread message.</string>
    <string name="sms_unreads">\.\.\. You have %1$s unread messages.</string>
    <string name="sms_ask_read_message">\.\.\. Message from %1$s. Do you want to read it?</string>
    <string name="email_no_message">\.\.\. You have no Email.</string>
    <string name="email_unread">\.\.\. You have %1$s unread Email.</string>
    <string name="email_unreads">\.\.\. You have %1$s unread Emails.</string>
    <string name="email_ask_read_message">\.\.\. Email from: %1$s, subject: %2$s. Do you want to read it?</string>
    <string name="weather_location">\.\.\. Your current location is %1$s.</string>
    <string name="weather_infomation">\.\.\. Weather: %1$s \.\.\. Temperature: %2$s\.\.\.</string>
    <string name="accounts">Accounts</string>
    <string name="description_add">Add Calendar</string>
    <string name="event_add">Add Event</string>
    <string name="summary">Title</string>
    <string name="time_start">FROM:</string>
    <string name="time_end">TO:</string>
    <string name="event_title">TITLE:</string>
    <string name="event_desc">CONTENT:</string>
    <string name="event_hint">Title</string>
    <string name="event_desc_hint">Content</string>
    <string name="event_repeat">Repeat</string>
    <string name="event_repeats">Repeats:</string>
    <string name="event_repeat_on">Repeat on:</string>
    <string name="event_repeat_every">Repeat every:</string>
    <string name="event_repeat_end_date">End date:</string>
    <string name="summary_hint">Summary</string>
    <string name="save">Save</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="batchadd">Copy Calendar x3 (Batch)</string>
    <string name="edit_calendar">Edit Calendar</string>
    <string name="edit_event">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete Calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="calendar_all_day">All day</string>
    <string name="email_instructions">Please enter your correct email and password and click on login button to proceed. We will use this email account for receiver and send mail.</string>
    <string name="email_name_hint">Enter your Gmail email</string>
    <string name="email_pass_hint">Enter your password</string>
    <string name="email_to">To:</string>
    <string name="email_body">Message:</string>
    <string name="email_image">Attach image</string>
    <string name="login_instructions">Please enter your correct email and password and click on login button. Account for test: tester1@cnc.vn. Pass: 12345678</string>
    <string name="login_name_hint">Enter your email</string>
    <string name="login_pass_hint">Enter your password</string>
    <string name="label_code">Code:</string>
    <string name="label_name">Name:</string>
    <string name="label_address">Address:</string>
    <string name="label_group">Group:</string>
    <string name="label_location">Location:</string>
    <string name="label_location_type">Location type:</string>
    <string name="label_note">Note:</string>
</resources>