<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_margin_layout" >

    <TextView
        android:id="@+id/txt_home_instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/email_instructions" />

    <EditText
        android:id="@+id/editId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_name_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_pass_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_login" />

</LinearLayout>