<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_event"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/tvSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_hint" >
    </EditText>

    <EditText
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_desc_hint" >
    </EditText>

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_start"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" >
        </TextView>

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStartLabel"
            android:background="@drawable/item_background_click"
            android:padding="@dimen/common_margin_layout"
            android:text="EEE, MMM dd, yyyy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStartLabel"
            android:layout_marginLeft="@dimen/common_margin_layout_medium"
            android:layout_toRightOf="@id/tvStartDate"
            android:background="@drawable/item_background_click"
            android:padding="@dimen/common_margin_layout"
            android:text="KK:mm aa"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" >
        </TextView>

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEndLabel"
            android:background="@drawable/item_background_click"
            android:padding="@dimen/common_margin_layout"
            android:text="EEE, MMM dd, yyyy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEndLabel"
            android:layout_marginLeft="@dimen/common_margin_layout_medium"
            android:layout_toRightOf="@id/tvEndDate"
            android:background="@drawable/item_background_click"
            android:padding="@dimen/common_margin_layout"
            android:text="KK:mm aa"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_layout_large" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSave"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>